<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter First No"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/etNo1"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Second No"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/etNo2"></EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSum"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Sum"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSub"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Subtract"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDiv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Divide"/>
</LinearLayout>